[package]
name = "progress-monitor"
version = "0.0.3"
edition = "2021"
rust-version = "1.60.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/progress-monitor"
description = """
Track any progress.
"""
categories = ["mathematics"]
keywords = ["progress", "monitor", "progress-monitor"]

[dependencies]
num = "0.4"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
